[tool.poetry]
name = "get-all-files"
version = "0.2.0"
description = "a simple package to get all files with given file extension in a directory"
authors = ["brendan whelan <bwheelz360@gmail.com>"]
readme = "README.md"
license = "LICENSE"
packages = [{include = "get_all_files"}]

[tool.poetry.dependencies]
python = "^3.8.1"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ["E402"]
per-file-ignores = ['__init__.py:F401',]
max-line-length = 120
count = true
